--- a/juci/CMakeLists.txt
+++ b/juci/CMakeLists.txt
@@ -7,11 +7,18 @@ INCLUDE(FindPkgConfig)
 # name of the executable on Windows will be example.exe
 add_executable(juci
 # list of every needed file to create the executable
-    juci.cc
-    controller.h
     model.h
+    models.cc
+
     view.h
-    view.cc)
+    views.cc
+
+    controller.h
+    controllers.cc
+
+    window.cc
+    juci.cc
+    )
 
 # dependencies
     pkg_check_modules(GTKMM REQUIRED gtkmm-3.0)
