--- a/juci/CMakeLists.txt
+++ b/juci/CMakeLists.txt
@@ -63,10 +63,10 @@ endif()
 # name of the executable on Windows will be example.exe
 add_executable(${project_name}
 # list of every needed file to create the executable
+    keybindings.h
     menu.h
-
+    keybindings.cc
     menu.cc
-
     window.cc
     juci.cc
     )
