--- a/juci/CMakeLists.txt
+++ b/juci/CMakeLists.txt
@@ -5,8 +5,18 @@ set(module juci_to_python_api)
 project (${project_name})
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_LIST_DIR}/cmake/Modules/")
 
 INCLUDE(FindPkgConfig)
+
+message("Searcing for libclang")
+#LIBCLANG_FOUND System has libclang.
+#LIBCLANG_INCLUDE_DIRS The libclang include directories.
+#LIBCLANG_LIBRARIES  The libraries needed to use libclang.
+#LIBCLANG_LIBRARY_DIR The path to the directory containing libclang.
+#LIBCLANG_KNOWN_LLVM_VERSIONS  Known LLVM release numbers.
+find_package(Testlcl)
+
 
 #### Finding boost, the variables below is set #####
 #PYTHONLIBS_FOUND            - True if headers and requested libraries were found
@@ -59,7 +69,6 @@ else()
   message("Gtkmm link dirs ${GTKMM_LIBRARIES}")
   message(FATAL_ERROR "The gtkmm libraries are required. Quitting.")
 endif()
-
 # name of the executable on Windows will be example.exe
 add_executable(${project_name}
   #list of every needed file to create the executable
@@ -67,6 +76,8 @@ add_executable(${project_name}
   keybindings
   menu
   source
+  sourcefile.h
+  sourcefile.cc
   window
   api
   notebook
@@ -81,11 +92,30 @@ add_library(${module} SHARED
   )
 # dependencies
 
-include_directories(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS} ${GTKMM_INCLUDE_DIRS} "/home/zalox/bachelor/libclang++/")
-link_directories(${GTKMM_LIBRARY_DIRS} ${Boost_LIBRARY_DIRS} ${PYTHON_INCLUDE_DIRS} "/home/zalox/bachelor/libclang++/")
+
+
+if(${lcl_NOTFOUND})
+  message("FATAL_ERROR ohh lord!")
+else()
+  message("Found libs!")
+endif()
+  
+include_directories(
+  ${Boost_INCLUDE_DIRS}
+  ${PYTHON_INCLUDE_DIRS}
+  ${GTKMM_INCLUDE_DIRS}
+  "/home/zalox/bachelor/libclang++/headers/"
+  )
+link_directories(
+  ${GTKMM_LIBRARY_DIRS}
+  ${Boost_LIBRARY_DIRS}
+  ${PYTHON_INCLUDE_DIRS}
+  ${LCL_LIBRARY_DIRS}
+  )
 #module:
 set_target_properties(${module} PROPERTIES PREFIX "") 
 target_link_libraries(${module} ${PYTHON_LIBRARIES} ${Boost_LIBRARIES})
 #executable:
-target_link_libraries(${project_name} ${GTKMM_LIBRARIES} ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} "/home/zalox/bachelor/libclang++/")
+target_link_libraries(${project_name} ${LCL_LIBRARIES} ${GTKMM_LIBRARIES} ${Boost_LIBRARIES} ${PYTHON_LIBRARIES})
+
 
