--- a/juci/config.json
+++ b/juci/config.json
@@ -1,193 +1,19 @@
 {
     "colors": {
-        "text_color": "black",
-        "string" : "green"
+        "text_color": "#333333",
+        "string" : "#CC0000",
+        "namespace_ref" : "#990099",
+        "type" : "#0066FF",
+        "keyword": "blue",
+        "comment": "grey",
+        "own": "pink"
     },
     "syntax": {
-        "1": "text_color",
-        "2": "text_color",
-        "2": "text_color",
-        "3": "text_color",
-        "4": "text_color",
-        "5": "text_color",
-        "6": "text_color",
-        "7": "text_color",
-        "8": "text_color",
-        "9": "text_color",
-        "10": "text_color",
-        "11": "text_color",
-        "12": "text_color",
-        "13": "text_color",
-        "14": "text_color",
-        "15": "text_color",
-        "16": "text_color",
-        "17": "text_color",
-        "18": "text_color",
-        "19": "text_color",
-        "20": "text_color",
-        "21": "text_color",
-        "22": "text_color",
-        "23": "text_color",
-        "24": "text_color",
-        "25": "text_color",
-        "26": "text_color",
-        "27": "text_color",
-        "28": "text_color",
-        "29": "text_color",
-        "30": "text_color",
-        "31": "text_color",
-        "32": "text_color",
-        "33": "text_color",
-        "34": "text_color",
-        "35": "text_color",
-        "36": "text_color",
-        "37": "text_color",
-        "38": "text_color",
-        "39": "text_color",
-        "40": "text_color",
-        "41": "text_color",
-        "42": "text_color",
-        "43": "text_color",
-        "44": "text_color",
-        "45": "text_color",
-        "46": "text_color",
-        "47": "text_color",
-        "48": "text_color",
-        "49": "text_color",
-        "50": "text_color",
-        "51": "text_color",
-        "70": "text_color",
-        "70": "text_color",
-        "71": "text_color",
-        "72": "text_color",
-        "73": "text_color",
-        "100": "text_color",
-        "100": "text_color",
-        "101": "text_color",
-        "102": "text_color",
-        "103": "text_color",
-        "104": "text_color",
-        "105": "text_color",
-        "106": "text_color",
-        "107": "text_color",
-        "108": "text_color",
+        "43": "type",
+        "46": "namespace_ref",
         "109": "string",
-        "110": "text_color",
-        "111": "text_color",
-        "112": "text_color",
-        "113": "text_color",
-        "114": "text_color",
-        "115": "text_color",
-        "116": "text_color",
-        "117": "text_color",
-        "118": "text_color",
-        "119": "text_color",
-        "120": "text_color",
-        "121": "text_color",
-        "122": "text_color",
-        "123": "text_color",
-        "124": "text_color",
-        "125": "text_color",
-        "126": "text_color",
-        "127": "text_color",
-        "128": "text_color",
-        "129": "text_color",
-        "130": "text_color",
-        "131": "text_color",
-        "132": "text_color",
-        "133": "text_color",
-        "134": "text_color",
-        "135": "text_color",
-        "136": "text_color",
-        "137": "text_color",
-        "138": "text_color",
-        "139": "text_color",
-        "140": "text_color",
-        "141": "text_color",
-        "142": "text_color",
-        "143": "text_color",
-        "144": "text_color",
-        "145": "text_color",
-        "146": "text_color",
-        "200": "text_color",
-        "200": "text_color",
-        "201": "text_color",
-        "202": "text_color",
-        "203": "text_color",
-        "204": "text_color",
-        "205": "text_color",
-        "206": "text_color",
-        "207": "text_color",
-        "208": "text_color",
-        "209": "text_color",
-        "210": "text_color",
-        "211": "text_color",
-        "212": "text_color",
-        "213": "text_color",
-        "214": "text_color",
-        "215": "text_color",
-        "216": "text_color",
-        "217": "text_color",
-        "218": "text_color",
-        "219": "text_color",
-        "220": "text_color",
-        "221": "text_color",
-        "222": "text_color",
-        "223": "text_color",
-        "224": "text_color",
-        "225": "text_color",
-        "226": "text_color",
-        "227": "text_color",
-        "228": "text_color",
-        "229": "text_color",
-        "230": "text_color",
-        "231": "text_color",
-        "232": "text_color",
-        "233": "text_color",
-        "234": "text_color",
-        "235": "text_color",
-        "236": "text_color",
-        "237": "text_color",
-        "238": "text_color",
-        "239": "text_color",
-        "240": "text_color",
-        "241": "text_color",
-        "242": "text_color",
-        "243": "text_color",
-        "244": "text_color",
-        "245": "text_color",
-        "246": "text_color",
-        "247": "text_color",
-        "248": "text_color",
-        "249": "text_color",
-        "250": "text_color",
-        "251": "text_color",
-        "252": "text_color",
-        "253": "text_color",
-        "300": "text_color",
-        "400": "text_color",
-        "400": "text_color",
-        "401": "text_color",
-        "402": "text_color",
-        "403": "text_color",
-        "404": "text_color",
-        "405": "text_color",
-        "406": "text_color",
-        "407": "text_color",
-        "408": "text_color",
-        "409": "text_color",
-        "410": "text_color",
-        "411": "text_color",
-        "412": "text_color",
-        "413": "text_color",
-        "414": "text_color",
-        "415": "text_color",
-        "416": "text_color",
-        "500": "text_color",
-        "501": "text_color",
-        "502": "text_color",
-        "503": "text_color",
-        "600": "text_color",
-        "700": "text_color"
+        "702": "keyword",
+        "703": "own",
+        "705": "comment"
         }
 }
