--- a/juci/config.json
+++ b/juci/config.json
@@ -18,6 +18,12 @@
             "705": "comment"
         }
     },
+    "keybindings": {
+	"split_window": "<control><alt>s",
+	"new_h_file": "<control><alt>h",
+	"new_cc_file": "<control><alt>c",
+	"close_tab": "<control>w"
+    },
     "example": {
 	"key": "value",
 	"key2": [
@@ -26,8 +32,5 @@
 	    3
 	],
 	"key3": "value"
-    },
-    "keybindings": {
-	"path" : "keybindings.xml"
     }
 }
