--- a/juci/config.json
+++ b/juci/config.json
@@ -24,7 +24,9 @@
 	"new_cc_file": "<alt>c",
 	"close_tab": "<control>w",
         "open_folder": "<control><alt>o",
-	"save_as": "<control><shift>s"
+	"save_as": "<control><shift>s",
+	"compile_and_run": "<control><alt>r>",
+	"compile": "<control>r"
     },
     "directoryfilter": {
         "ignore": [
