Fixed save and save as

--- a/juci/config.json
+++ b/juci/config.json
@@ -24,6 +24,7 @@
 	"new_cc_file": "<alt>c",
 	"close_tab": "<control>w",
         "open_folder": "<control><alt>o",
+	"save": "<control>s",
 	"save_as": "<control><shift>s",
 	"compile_and_run": "<control><alt>r>",
 	"compile": "<control>r"
