Fixed keybinding on compile and run

--- a/juci/config.json
+++ b/juci/config.json
@@ -27,7 +27,7 @@
         "edit_undo": "<control>z",
 	"save": "<control>s",
 	"save_as": "<control><shift>s",
-	"compile_and_run": "<control><alt>r>",
+	"compile_and_run": "<control><alt>r",
 	"compile": "<control>r"
     },
     "directoryfilter": {
