fixed legal extensions to parse in source and notebook, with GM

--- a/juci/config.json
+++ b/juci/config.json
@@ -18,9 +18,16 @@
             "705": "comment"
         },
         "extensions": [
-            "ext1",
-            "ext2",
-            "ext3"
+            "c",
+            "cc",
+            "cpp",
+	"cxx",
+	"c++",
+	"h",
+	"hh",
+	"hpp",
+	"hxx",
+	"h++"
         ]
     },
     "keybindings": {
