--- a/juci/config.json
+++ b/juci/config.json
@@ -55,7 +55,15 @@
             "cmakelists.txt",
             "in-lowercase.pls"
         ]
-        },
+    },
+    "project": {
+        "compile_commands": [
+            "rm -rf ./build",
+            "mkdir build",
+            "cmake -B./build -H.",
+            "cd ./.build/; make"
+        ]
+    },
     "example": {
 	"key": "value",
 	"key2": [
