--- a/juci/config.json
+++ b/juci/config.json
@@ -58,9 +58,9 @@
     },
     "project": {
         "compile_commands": [
-            "rm -rf ./build",
+            "rm -rf ./.build",
             "mkdir build",
-            "cmake -B./build -H.",
+            "cmake -B./.build -H.",
             "cd ./.build/; make"
         ]
     },
