added run commands to config

--- a/juci/config.json
+++ b/juci/config.json
@@ -57,6 +57,9 @@
         ]
     },
     "project": {
+        "run_path": [
+            ".build"
+        ],
         "compile_commands": [
             "rm -rf ./.build",
             "mkdir build",
