--- a/juci/config.json
+++ b/juci/config.json
@@ -32,10 +32,12 @@
     },
     "keybindings": {
 	"split_window": "<control><alt>s",
+        "new_file": "<control>n",
 	"new_h_file": "<control><alt>h",
 	"new_cc_file": "<alt>c",
 	"close_tab": "<control>w",
         "open_folder": "<control><alt>o",
+        "open_file": "<control>o",
         "edit_undo": "<control>z",
 	"save": "<control>s",
 	"save_as": "<control><shift>s",
