--- a/juci/config.json
+++ b/juci/config.json
@@ -72,8 +72,9 @@
         "compile_commands": [
             "rm -rf ./.build",
             "mkdir ./.build",
-            "cmake -B./.build -H.",
-            "cd ./.build/; make"
+            "cmake -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -B./.build -H.",
+            "cd ./.build/; make",
+	    "cp ./.build/compile_commands.json compile_commands.json"
         ]
     },
     "example": {
