Fixes #3 Add undo and redo by hotkey

--- a/juci/config.json
+++ b/juci/config.json
@@ -47,6 +47,7 @@
         "edit_cut": "<control>x",
         "edit_paste": "<control>v",
         "edit_undo": "<control>z",
+	"edit_redo": "<control>y",
         "edit_find": "<control>f",
 	"compile_and_run": "<control><alt>r",
 	"compile": "<control>r"
