Moved indenting to source.cc, added tab_size in config.json, some smaller bugfixes, Gsv::init is in juci.cc, right after Gtk::Application::create as in examples. Also some improvements to indenting.

--- a/juci/config.json
+++ b/juci/config.json
@@ -28,7 +28,8 @@
 	    "hpp",
 	    "hxx",
 	    "h++"
-        ]
+        ],
+	"tab_size": 2
     },
     "keybindings": {
         "new_file": "<control>n",
