--- a/juci/config.json
+++ b/juci/config.json
@@ -1,7 +1,7 @@
 {
     "source": {
         "colors": {
-            "text_color": "#333333",
+            "text_color": "black",
             "string": "#CC0000",
             "namespace_ref": "#990099",
             "type": "#0066FF",
