Added singleton.*, at the moment only Source::Config made singleton. Tooltips now have yellow background. Also some cleanup.

--- a/juci/CMakeLists.txt
+++ b/juci/CMakeLists.txt
@@ -127,6 +127,8 @@ add_executable(${project_name}
   terminal.cc
   tooltips.h
   tooltips.cc
+  singletons.h
+  singletons.cc
   )
 
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
