--- a/juci/config.json
+++ b/juci/config.json
@@ -34,6 +34,7 @@
         ],
         "visual": {
             "background": "white",
+            "background_tooltips": "yellow",
             "font": "Monospace",
             "show_line_numbers": 1,
             "highlight_current_line": 1
