--- a/juci/config.json
+++ b/juci/config.json
@@ -58,6 +58,7 @@
         "edit_undo": "<control>z",
         "edit_redo": "<control>y",
         "edit_find": "<control>f",
+        "goto_declaration": "<control>d",
         "compile_and_run": "<control><alt>r",
         "compile": "<control>r"
     },
