The entrybox is remade to be more general and easy to use. Search code to new entrybox will be finished next commit.

--- a/juci/CMakeLists.txt
+++ b/juci/CMakeLists.txt
@@ -117,8 +117,8 @@ add_executable(${project_name}
   api.cc
   notebook.cc
   notebook.h
-  entry.h
-  entry.cc
+  entrybox.h
+  entrybox.cc
   directories.h
   directories.cc
   terminal.h
