--- a/juci/config.json
+++ b/juci/config.json
@@ -35,7 +35,7 @@
             "background": "white",
             "background_selected": "blue",
             "background_tooltips": "yellow",
-            "font": "Monospace",
+            "font": "Menlo 12",
             "show_line_numbers": 1,
             "highlight_current_line": 1
         },
