Gtk::Stock is depricated, so removed these. Cut/Paste/Copy now also works in entries. Redo now has key binding shift-control-z, which is most common. Also keys now use <primary> instead of <control> and thus is more platform independent.

--- a/juci/config.json
+++ b/juci/config.json
@@ -43,25 +43,25 @@
         "tab_char": "<space>"
     },
     "keybindings": {
-        "new_file": "<control>n",
-        "open_folder": "<control><alt>o",
-        "open_file": "<control>o",
-        "save": "<control>s",
-        "save_as": "<control><shift>s",
-        "quit": "<control>q",
-        "split_window": "<control><alt>s",
-        "close_tab": "<control>w",
-        "edit_copy": "<control>c",
-        "edit_cut": "<control>x",
-        "edit_paste": "<control>v",
-        "edit_undo": "<control>z",
-        "edit_redo": "<control>y",
-        "edit_find": "<control>f",
-        "source_goto_declaration": "<control>d",
-        "source_goto_method": "<control>m",
-        "source_rename": "<control>r",
-        "compile_and_run": "<control>Return",
-        "compile": "<control><shift>Return"
+        "new_file": "<primary>n",
+        "open_folder": "<primary><alt>o",
+        "open_file": "<primary>o",
+        "save": "<primary>s",
+        "save_as": "<primary><shift>s",
+        "quit": "<primary>q",
+        "split_window": "<primary><alt>s",
+        "close_tab": "<primary>w",
+        "edit_copy": "<primary>c",
+        "edit_cut": "<primary>x",
+        "edit_paste": "<primary>v",
+        "edit_undo": "<primary>z",
+        "edit_redo": "<primary><shift>z",
+        "edit_find": "<primary>f",
+        "source_goto_declaration": "<primary>d",
+        "source_goto_method": "<primary>m",
+        "source_rename": "<primary>r",
+        "compile_and_run": "<primary>Return",
+        "compile": "<primary><shift>Return"
     },
     "directoryfilter": {
         "ignore": [
